--- a/asset/manifest_reference.json
+++ b/asset/manifest_reference.json
@@ -1,186 +1,262 @@
 {
   "@context": {
+    "envited-x": "https://ontologies.envited-x.net/envited-x/v2/ontology#",
+    "manifest": "https://ontologies.envited-x.net/manifest/v4/ontology#",
+    "gx": "https://registry.lab.gaia-x.eu/development/api/trusted-shape-registry/v1/shapes/jsonld/trustframework#",
     "sh": "http://www.w3.org/ns/shacl#",
-    "skos": "http://www.w3.org/2004/02/skos/core#",
     "rdf": "http://www.w3.org/1999/02/22-rdf-syntax-ns#",
     "xsd": "http://www.w3.org/2001/XMLSchema#",
-    "manifest": "https://github.com/GAIA-X4PLC-AAD/ontology-management-base/tree/main/manifest/",
-    "gx": "https://registry.lab.gaia-x.eu/development/api/trusted-shape-registry/v1/shapes/jsonld/trustframework#"
+    "skos": "http://www.w3.org/2004/02/skos/core#"
   },
   "@id": "did:web:registry.gaia-x.eu:Manifest:fTAZdQy9LZNh6G-tHPpkpxJhNobhXVmauYxr",
   "@type": "manifest:Manifest",
-  "manifest:data": {
-    "@type": "manifest:Data",
-    "manifest:assetData": [
-      {
-        "@type": "manifest:Link",
-        "manifest:accessRole": {
-          "@value": "owner"
-        },
-        "manifest:type": {
-          "@value": "assetData"
-        },
-        "manifest:fileMetaData": {
-          "@type": "manifest:FileMetaData",
-          "manifest:uri": {
-            "@value": "./data/Gaia_X_Example_Asset_TestfeldNiedersachsen_ALKS_3DModel_opt_osgb.zip",
-            "@type": "xsd:anyURI"
-          },
-          "manifest:fileSize": {
-            "@value": "155068719",
-            "@type": "xsd:integer"
-          },
-          "manifest:filename": {
-            "@value": "Gaia_X_Example_Asset_TestfeldNiedersachsen_ALKS_3DModel_opt_osgb.zip",
-            "@type": "xsd:string"
-          }
-        }
+  "manifest:hasManifestReference": {
+    "@type": "manifest:Link",
+    "manifest:hasAccessRole": {
+      "@type": "manifest:AccessRole",
+      "@id": "envited-x:isPublic"
+    },
+    "manifest:hasCategory": {
+      "@type": "manifest:Category",
+      "@id": "envited-x:isManifest"
+    },
+    "manifest:hasFileMetadata": {
+      "@type": "manifest:FileMetadata",
+      "manifest:filePath": {
+        "@value": "./manifest_reference.json",
+        "@type": "xsd:anyURI"
+      },
+      "manifest:mimeType": {
+        "@value": "application/ld+json",
+        "@type": "xsd:string"
       }
-    ],
-    "manifest:contentData": [
-      {
-        "@type": "manifest:Link",
-        "manifest:accessRole": {
-          "@value": "publicUser"
-        },
-        "manifest:type": {
-          "@value": "documentation"
-        },
-        "manifest:fileMetaData": {
-          "@type": "manifest:FileMetaData",
-          "manifest:uri": {
-            "@value": "./documentation/Gaia_X_Example_Asset_TestfeldNiedersachsen_ALKS_3DModel_opt_osgb_TRIANxUNITY_Full_Workflow_Documentation.pdf",
-            "@type": "xsd:anyURI"
-          },
-          "manifest:fileSize": {
-            "@value": "336937",
-            "@type": "xsd:integer"
-          },
-          "manifest:filename": {
-            "@value": "Gaia_X_Example_Asset_TestfeldNiedersachsen_ALKS_3DModel_opt_osgb_TRIANxUNITY_Full_Workflow_Documentation.pdf",
-            "@type": "xsd:string"
-          }
-        }
-      },
-      {
-        "@type": "manifest:Link",
-        "manifest:accessRole": {
-          "@value": "publicUser"
-        },
-        "manifest:type": {
-          "@value": "metadata"
-        },
-        "manifest:fileMetaData": {
-          "@type": "manifest:FileMetaData",
-          "manifest:uri": {
-            "@value": "./metadata/domainMetadata.json",
-            "@type": "xsd:anyURI"
-          },
-          "manifest:fileSize": {
-            "@value": "3571",
-            "@type": "xsd:integer"
-          },
-          "manifest:filename": {
-            "@value": "domainMetadata.json",
-            "@type": "xsd:string"
-          }
-        }
-      },
-      {
-        "@type": "manifest:Link",
-        "manifest:accessRole": {
-          "@value": "publicUser"
-        },
-        "manifest:type": {
-          "@value": "visualization"
-        },
-        "manifest:fileMetaData": {
-          "@type": "manifest:FileMetaData",
-          "manifest:uri": {
-            "@value": "./visualization/Gaia_X_Example_Asset_TestfeldNiedersachsen_ALKS_3DModel_opt_osgb_impression-01.png",
-            "@type": "xsd:anyURI"
-          },
-          "manifest:fileSize": {
-            "@value": "81864",
-            "@type": "xsd:integer"
-          },
-          "manifest:filename": {
-            "@value": "Gaia_X_Example_Asset_TestfeldNiedersachsen_ALKS_3DModel_opt_osgb_impression-01.png",
-            "@type": "xsd:string"
-          }
-        }
-      },
-      {
-        "@type": "manifest:Link",
-        "manifest:accessRole": {
-          "@value": "publicUser"
-        },
-        "manifest:type": {
-          "@value": "visualization"
-        },
-        "manifest:fileMetaData": {
-          "@type": "manifest:FileMetaData",
-          "manifest:uri": {
-            "@value": "./visualization/Gaia_X_Example_Asset_TestfeldNiedersachsen_ALKS_3DModel_opt_osgb_impression-02.png",
-            "@type": "xsd:anyURI"
-          },
-          "manifest:fileSize": {
-            "@value": "1185485",
-            "@type": "xsd:integer"
-          },
-          "manifest:filename": {
-            "@value": "Gaia_X_Example_Asset_TestfeldNiedersachsen_ALKS_3DModel_opt_osgb_impression-02.png",
-            "@type": "xsd:string"
-          }
-        }
-      },
-      {
-        "@type": "manifest:Link",
-        "manifest:accessRole": {
-          "@value": "publicUser"
-        },
-        "manifest:type": {
-          "@value": "visualization"
-        },
-        "manifest:fileMetaData": {
-          "@type": "manifest:FileMetaData",
-          "manifest:uri": {
-            "@value": "./visualization/Gaia_X_Example_Asset_TestfeldNiedersachsen_ALKS_3DModel_opt_osgb_impression-03.png",
-            "@type": "xsd:anyURI"
-          },
-          "manifest:fileSize": {
-            "@value": "1261016",
-            "@type": "xsd:integer"
-          },
-          "manifest:filename": {
-            "@value": "Gaia_X_Example_Asset_TestfeldNiedersachsen_ALKS_3DModel_opt_osgb_impression-03.png",
-            "@type": "xsd:string"
-          }
-        }
-      }
-    ]
+    }
   },
-  "manifest:license": {
+  "manifest:hasLicense": {
     "@type": "manifest:License",
-    "manifest:spdxIdentifier": {
-      "@value": "MPL-2.0",
-      "@type": "xsd:string"
+    "gx:license": {
+      "@value": "MPL-2.0"
     },
     "manifest:licenseData": {
       "@type": "manifest:Link",
-      "manifest:accessRole": {
-        "@value": "publicUser"
+      "manifest:hasAccessRole": {
+        "@type": "manifest:AccessRole",
+        "@id": "envited-x:isPublic"
       },
-      "manifest:type": {
-        "@value": "license"
+      "manifest:hasCategory": {
+        "@type": "manifest:Category",
+        "@id": "envited-x:isLicense"
       },
-      "manifest:fileMetaData": {
-        "@type": "manifest:FileMetaData",
-        "manifest:uri": {
+      "manifest:hasFileMetadata": {
+        "@type": "manifest:FileMetadata",
+        "manifest:filePath": {
           "@value": "https://www.mozilla.org/en-US/MPL/2.0/",
           "@type": "xsd:anyURI"
+        },
+        "manifest:mimeType": {
+          "@value": "text/html",
+          "@type": "xsd:string"
         }
       }
     }
-  }
+  },
+  "manifest:hasArtifacts": [
+    {
+      "@type": "manifest:Link",
+      "manifest:hasAccessRole": {
+        "@type": "manifest:AccessRole",
+        "@id": "envited-x:isOwner"
+      },
+      "manifest:hasCategory": {
+        "@type": "manifest:Category",
+        "@id": "envited-x:isSimulationData"
+      },
+      "manifest:hasFileMetadata": {
+        "@type": "manifest:FileMetadata",
+        "manifest:filePath": {
+          "@value": "./simulation-data/Gaia_X_Example_Asset_TestfeldNiedersachsen_ALKS_3DModel_opt_osgb.zip",
+          "@type": "xsd:anyURI"
+        },
+        "manifest:fileSize": {
+          "@value": 155068719,
+          "@type": "xsd:integer"
+        },
+        "manifest:filename": {
+          "@value": "Gaia_X_Example_Asset_TestfeldNiedersachsen_ALKS_3DModel_opt_osgb.zip",
+          "@type": "xsd:string"
+        },
+        "manifest:mimeType": {
+          "@value": "application/zip",
+          "@type": "xsd:string"
+        },
+        "manifest:timestamp": {
+          "@value": "2024-11-28T15:00:07",
+          "@type": "xsd:dateTime"
+        }
+      }
+    },
+    {
+      "@type": "manifest:Link",
+      "manifest:hasAccessRole": {
+        "@type": "manifest:AccessRole",
+        "@id": "envited-x:isPublic"
+      },
+      "manifest:hasCategory": {
+        "@type": "manifest:Category",
+        "@id": "envited-x:isDocumentation"
+      },
+      "manifest:hasFileMetadata": {
+        "@type": "manifest:FileMetadata",
+        "manifest:filePath": {
+          "@value": "./documentation/Gaia_X_Example_Asset_TestfeldNiedersachsen_ALKS_3DModel_opt_osgb_TRIANxUNITY_Full_Workflow_Documentation.pdf",
+          "@type": "xsd:anyURI"
+        },
+        "manifest:fileSize": {
+          "@value": 336937,
+          "@type": "xsd:integer"
+        },
+        "manifest:filename": {
+          "@value": "Gaia_X_Example_Asset_TestfeldNiedersachsen_ALKS_3DModel_opt_osgb_TRIANxUNITY_Full_Workflow_Documentation.pdf",
+          "@type": "xsd:string"
+        },
+        "manifest:mimeType": {
+          "@value": "application/pdf",
+          "@type": "xsd:string"
+        }
+      }
+    },
+    {
+      "@type": "manifest:Link",
+      "manifest:iri": {
+        "@id": "did:web:registry.gaia-x.eu:environment-model:xwsY5p3Z4Jjvf7XGp2PDnDFt36AlVhYnahHU"
+      },
+      "skos:note": {
+        "@value": "This metadata file conforms to the environment-model ontology.",
+        "@type": "xsd:string"
+      },
+      "sh:conformsTo": [
+        {
+          "@id": "https://ontologies.envited-x.net/environment-model/v4/ontology#"
+        }
+      ],
+      "manifest:hasAccessRole": {
+        "@type": "manifest:AccessRole",
+        "@id": "envited-x:isPublic"
+      },
+      "manifest:hasCategory": {
+        "@type": "manifest:Category",
+        "@id": "envited-x:isMetadata"
+      },
+      "manifest:hasFileMetadata": {
+        "@type": "manifest:FileMetadata",
+        "manifest:filePath": {
+          "@value": "./metadata/environment-model_instance.json",
+          "@type": "xsd:anyURI"
+        },
+        "manifest:fileSize": {
+          "@value": 6145,
+          "@type": "xsd:integer"
+        },
+        "manifest:filename": {
+          "@value": "environment-model_instance.json",
+          "@type": "xsd:string"
+        },
+        "manifest:mimeType": {
+          "@value": "application/ld+json",
+          "@type": "xsd:string"
+        }
+      }
+    },
+    {
+      "@type": "manifest:Link",
+      "manifest:hasAccessRole": {
+        "@type": "manifest:AccessRole",
+        "@id": "envited-x:isPublic"
+      },
+      "manifest:hasCategory": {
+        "@type": "manifest:Category",
+        "@id": "envited-x:isMedia"
+      },
+      "manifest:hasFileMetadata": {
+        "@type": "manifest:FileMetadata",
+        "manifest:filePath": {
+          "@value": "./media/Gaia_X_Example_Asset_TestfeldNiedersachsen_ALKS_3DModel_opt_osgb_impression-01.png",
+          "@type": "xsd:anyURI"
+        },
+        "manifest:fileSize": {
+          "@value": 81864,
+          "@type": "xsd:integer"
+        },
+        "manifest:filename": {
+          "@value": "Gaia_X_Example_Asset_TestfeldNiedersachsen_ALKS_3DModel_opt_osgb_impression-01.png",
+          "@type": "xsd:string"
+        },
+        "manifest:mimeType": {
+          "@value": "image/png",
+          "@type": "xsd:string"
+        }
+      }
+    },
+    {
+      "@type": "manifest:Link",
+      "manifest:hasAccessRole": {
+        "@type": "manifest:AccessRole",
+        "@id": "envited-x:isRegistered"
+      },
+      "manifest:hasCategory": {
+        "@type": "manifest:Category",
+        "@id": "envited-x:isMedia"
+      },
+      "manifest:hasFileMetadata": {
+        "@type": "manifest:FileMetadata",
+        "manifest:filePath": {
+          "@value": "./media/Gaia_X_Example_Asset_TestfeldNiedersachsen_ALKS_3DModel_opt_osgb_impression-02.png",
+          "@type": "xsd:anyURI"
+        },
+        "manifest:fileSize": {
+          "@value": 1185485,
+          "@type": "xsd:integer"
+        },
+        "manifest:filename": {
+          "@value": "Gaia_X_Example_Asset_TestfeldNiedersachsen_ALKS_3DModel_opt_osgb_impression-02.png",
+          "@type": "xsd:string"
+        },
+        "manifest:mimeType": {
+          "@value": "image/png",
+          "@type": "xsd:string"
+        }
+      }
+    },
+    {
+      "@type": "manifest:Link",
+      "manifest:hasAccessRole": {
+        "@type": "manifest:AccessRole",
+        "@id": "envited-x:isRegistered"
+      },
+      "manifest:hasCategory": {
+        "@type": "manifest:Category",
+        "@id": "envited-x:isMedia"
+      },
+      "manifest:hasFileMetadata": {
+        "@type": "manifest:FileMetadata",
+        "manifest:filePath": {
+          "@value": "./media/Gaia_X_Example_Asset_TestfeldNiedersachsen_ALKS_3DModel_opt_osgb_impression-03.png",
+          "@type": "xsd:anyURI"
+        },
+        "manifest:fileSize": {
+          "@value": 1261016,
+          "@type": "xsd:integer"
+        },
+        "manifest:filename": {
+          "@value": "Gaia_X_Example_Asset_TestfeldNiedersachsen_ALKS_3DModel_opt_osgb_impression-03.png",
+          "@type": "xsd:string"
+        },
+        "manifest:mimeType": {
+          "@value": "image/png",
+          "@type": "xsd:string"
+        }
+      }
+    }
+  ],
+  "manifest:hasReferencedArtifacts": []
 }
