--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,8 +10,12 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repository
+    - name: Checkout repository (+ download lfs dependencies)
       uses: actions/checkout@v4
+      with:
+          lfs: true
+    - name: Checkout LFS objects
+      run: git lfs checkout
 
     - name: Set up Node.js
       uses: actions/setup-node@v4
@@ -24,7 +28,7 @@ jobs:
     - name: Create zip file
       run: |
         cd asset
-        zip -r ../Gaia_X_Example_Asset_TestfeldNiedersachsen_ALKS_3DModel_opt_osgb.zip ./*
+        zip -r ../Example_Environmental_Model_for_TestfeldNiedersachsen.zip ./*
  
     - name: Create Release
       id: create_release
